[package]
name = "todo_list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
eframe = { version = "0.27.2", features = ["persistence"] }
egui = "0.27.2"
env_logger = "0.11.3"
rfd = "0.14.1"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tempfile = "3"
